--- a/requirements.txt
+++ b/requirements.txt
@@ -1,40 +1,47 @@
 argcomplete==1.10.0
-asgiref==3.2.7
+asgiref==3.2.10
 beautifulsoup4==4.8.0
+certifi==2020.6.20
 chardet==3.0.4
 click==7.1.2
 cycler==0.10.0
-datauri==1.0.0
-Django==3.0.6
+Django==3.0.7
 docx2txt==0.8
 EbookLib==0.17.1
 extract-msg==0.23.1
+idna==2.9
 IMAPClient==2.1.0
-joblib==0.14.1
+joblib==0.15.1
 kiwisolver==1.2.0
-lxml==4.5.0
-matplotlib==3.2.1
+lxml==4.5.1
+matplotlib==3.2.2
 nltk==3.5
-numpy==1.18.4
+numpy==1.19.0
+oauthlib==3.1.0
 olefile==0.46
 pdfminer.six==20181108
 Pillow==7.1.2
-pkg-resources==0.0.0
-pycryptodome==3.9.7
+pycryptodome==3.9.8
 pyparsing==2.4.7
+PySocks==1.7.1
 python-datauri==0.2.8
 python-dateutil==2.8.1
 python-pptx==0.6.18
 pytz==2020.1
-regex==2020.4.4
+regex==2020.6.8
+requests==2.24.0
+requests-oauthlib==1.3.0
 six==1.12.0
-sortedcontainers==2.1.0
-soupsieve==2.0
+sortedcontainers==2.2.2
+soupsieve==2.0.1
 SpeechRecognition==3.8.1
 sqlparse==0.3.1
+textblob==0.15.3
 textract==1.6.3
-tqdm==4.46.0
+tqdm==4.46.1
+tweepy==3.8.0
 tzlocal==1.5.1
+urllib3==1.25.9
 wordcloud==1.7.0
 xlrd==1.2.0
-XlsxWriter==1.2.8
+XlsxWriter==1.2.9
